# openvino_2022.1.0.643_MaskRCNN

./: CMakeLists.txt  README.md  main.cpp  main_mmlab.cpp  openvinoMaskRCNN.cpp  openvinoMaskRCNNMMlab.cpp  openvinoYoloV7Inst.cpp
include/: openvinoMaskRCNN.h  openvinoMaskRCNNMMlab.h  openvinoYoloV7Inst.h
